Modif header/Ajout carousel/Design++

--- a/Front-end/Le-plateau.html
+++ b/Front-end/Le-plateau.html
@@ -1,121 +1,110 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le Plateau - Parc Animalier</title>
+    <title>Document</title>
     <link rel="stylesheet" href="Le-plateau.css">
 </head>
 <body>
     <header>
-        <nav class="header-container">
-            <div class="logo">
-                <a href="Accueil.html">
-                    <img src="Public/logo-site.png" alt="Logo Parc Animalier de l'ISEN">
-                </a>
-            </div>
-    
-            <ul class="nav-links">
-                <li><a href="decouvrir.html">Découvrir le Parc</a></li>
-                <li><a href="gestion-biomes.html">Les biomes</a></li>
-                <li><a href="animaux.html">Animaux</a></li>
-                <li><a href="services.html">Nos Services</a></li>
-                <li><a href="billeterie.html">Billeterie</a></li>
-            </ul>
-    
-            <a href="Connexion.html" class="Inscription">
-                <img src="Public/empreinte-de-patte.png" alt="PatteChat" class="icon"> Inscription
-            </a>
+        <nav>
+            <a href="decouvrir.html">Découvrir le Parc</a>
+            <a href="gestion-biomes.html">Les biomes</a>
+            <a href="animaux.html">Animaux</a>
+            <a href="services.html">Nos Services</a>
+            <a href="billeterie.html">Billeterie</a>
+            <a href="Connexion.html">Inscription</a>
         </nav>
     </header>
 
-    <main class="plateau-container">
-        <section class="intro-section">
-            <h1>Bienvenue dans le Biome "Le Plateau"</h1>
-            <p>Souhaitez-vous découvrir les animaux qui se cachent derrière les enclos du biome Le Plateau ? Explorez les enclos pour rencontrer nos animaux fascinants.</p>
-        </section>
-
-        <section class="enclos-list">
-            <a href="plateau-enclosA.html" class="enclos-link">
-                <div class="enclos">
-                    <img src="Public/lion.png" alt="Enclos A">
-                    <h3>Enclos A</h3>
-                    <p>Découvrez le lion majestueux.</p>
+    <div class="carousel">
+        <div class="list">
+            <div class="item">
+                <img src="public/Le-plateau/plateau.jpg">
+                <div class="content">
+                    <div class="author">ISEN'ZOO</div>
+                    <div class="title">BIOME "LE PLATEAU"</div>
+                    <div class="des">
+                        Le Plateau est constitué d'onze enclos, les animaux sont variés et prêt à vous rencontrer !
+                    </div>
+                </div>
+            </div>           
+        </div>
+        <div class="thumbnail">
+            <a href="plateau-enclos1.html" class="item">
+                <img src="Public/Le-plateau/lionne.jpg" alt="Enclos 1">
+                <div class="content">
+                    <div class="title">ENCLOS 1 - LION</div>
                 </div>
             </a>
-
-           <a href="plateau-enclosB.html" class="enclos-link">
-                <div class="enclos">
-                    <img src="Public/Hippopotame.jpg" alt="Enclos B">
-                    <h3>Enclos B</h3>
-                    <p> Découvrez le roi des rivières</p>
+            <a href="plateau-enclos2.html" class="item">
+                <img src="Public/Le-plateau/Hippopotame.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 2 - HIPPOPOTAME</div>
                 </div>
             </a>
-
-            <a href="plateau-enclosC.html" class="enclos-link">
-                <div class="enclos">
-                    <img src="Public/enclos-plateau.jpg" alt="Enclos C">
-                    <h3>Enclos C</h3>
-                    <p>In process</p>
+            <a href="plateau-enclos3.html" class="item">
+                <img src="Public/Le-plateau/zebre.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 3 - ZÈBRE</div>
                 </div>
             </a>
-
-            <a href="plateau-enclosD.html" class="enclos-link">
-                <div class="enclos">
-                    <img src="Public/enclos-plateau.jpg" alt="Enclos D">
-                    <h3>Enclos D</h3>
-                    <p>In process</p>
+            <a href="plateau-enclos4.html" class="item">
+                <img src="Public/Le-plateau/hyène.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 4 - HYENE</div>
                 </div>
             </a>
-
-            <a href="plateau-enclosE.html" class="enclos-link">
-                <div class="enclos">
-                    <img src="Public/enclos-plateau.jpg" alt="Enclos E">
-                    <h3>Enclos E</h3>
-                    <p>In process</p>
+            <a href="plateau-enclos5.html" class="item">
+                <img src="Public/Le-plateau/loupcriniere.png">
+                <div class="content">
+                    <div class="title">ENCLOS 5 - LOUP À CRINIÈRE</div>
                 </div>
             </a>
-
-            <a href="plateau-enclosF.html" class="enclos-link">
-                <div class="enclos">
-                    <img src="Public/enclos-plateau.jpg" alt="Enclos F">
-                    <h3>Enclos F</h3>
-                    <p>In process</p>
+            <a href="plateau-enclos6.html" class="item">
+                <img src="Public/Le-plateau/plateau.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 6 - GIRAFE</div>
                 </div>
             </a>
-
-            <a href="plateau-enclosG.html" class="enclos-link">
-                <div class="enclos">
-                    <img src="Public/enclos-plateau.jpg" alt="Enclos G">
-                    <h3>Enclos G</h3>
-                    <p>In process</p>
+            <a href="plateau-enclos7.html" class="item">
+                <img src="Public/Le-plateau/grivet.png">
+                <div class="content">
+                    <div class="title">ENCLOS 7 - GRIVET</div>
                 </div>
             </a>
-
-            <a href="plateau-enclosH.html" class="enclos-link">
-                <div class="enclos">
-                    <img src="Public/enclos-plateau.jpg" alt="Enclos H">
-                    <h3>Enclos H</h3>
-                    <p>In process</p>
+            <a href="plateau-enclos8.html" class="item">
+                <img src="Public/Le-plateau/elephant.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 8 - ÉLÉPHANT</div>
                 </div>
             </a>
-
-            <a href="plateau-enclosI.html" class="enclos-link">
-                <div class="enclos">
-                    <img src="Public/enclos-plateau.jpg" alt="Enclos I">
-                    <h3>Enclos I</h3>
-                    <p>In process</p>
+            <a href="plateau-enclos9.html" class="item">
+                <img src="Public/Le-plateau/varankomodo.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 9 - VARAN</div>
                 </div>
             </a>
-
-            <a href="plateau-enclosJ.html" class="enclos-link">
-                <div class="enclos">
-                    <img src="Public/enclos-plateau.jpg" alt="Enclos J">
-                    <h3>Enclos J</h3>
-                    <p>In process</p>
+            <a href="plateau-enclos10.html" class="item">
+                <img src="Public/Le-plateau/ouistiti.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 10 - OUISTITI</div>
                 </div>
             </a>
-        </section>
-    </main>
+            <a href="plateau-enclos11.html" class="item">
+                <img src="Public/Le-plateau/tamarin.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 11 - TAMARIN</div>
+                </div>
+            </a>
+        </div>
+        <div class="arrows"></div>
+            <button id="prev"><</button>
+            <button id="next">></button>
+        </div>
+        <!-- time running -->
+        <div class="time"></div>
+    </div>
 </body>
 </html>
