--- a/Front-end/Decouvrir.html
+++ b/Front-end/Decouvrir.html
@@ -3,27 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parc Animalier de l'ISEN</title>
+    <title>ISEN'ZOO</title>
     <link rel="stylesheet" href="decouvrir.css">
 <body>
     <header>
-        <nav class="header-container">
-            <div class="logo">
-                <a href="Accueil.html">
-                    <img src="Public/logo-site.png" alt="Logo Parc Animalier de l'ISEN">
-                </a>
-            </div>
-    
-            <ul class="nav-links">
-                <li><a href="decouvrir.html">Découvrir le Parc</a></li>
-                <li><a href="gestion-biomes.html">Les biomes</a></li>
-                <li><a href="animaux.html">Animaux</a></li>
-                <li><a href="services.html">Nos Services</a></li>
-                <li><a href="billeterie.html">Billeterie</a></li>
-            </ul>
-            <a href="Connexion.html" class="Inscription">
-                <img src="Public/empreinte-de-patte.png" alt="PatteChat" class="icon"> Inscription
-            </a>
+        <nav>
+            <a href="decouvrir.html">Découvrir le Parc</a>
+            <a href="gestion-biomes.html">Les biomes</a>
+            <a href="animaux.html">Animaux</a>
+            <a href="services.html">Nos Services</a>
+            <a href="billeterie.html">Billeterie</a>
+            <a href="Connexion.html">Inscription</a>
         </nav>
     </header>
 
