--- a/Front-end/la-bergerie-des-reptiles.html
+++ b/Front-end/la-bergerie-des-reptiles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bergerie des Reptiles</title>
-    <link rel="stylesheet" href="Bergerie-des-reptiles.css">
+    <link rel="stylesheet" href="la-bergerie-des-reptiles.css">
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
     <div class="carousel">
         <div class="list">
             <div class="item">
-                <img src="public/Bergerie-des-reptiles/bergerie.jpg" alt="Bergerie des Reptiles">
+                <img src="public/bergerie.jpg" alt="Bergerie des Reptiles">
                 <div class="content">
                     <div class="author">ISEN'ZOO</div>
                     <div class="title">BIOME "LA BERGERIE DES REPTILES"</div>
