--- a/Front-end/la-bergerie-des-reptiles.html
+++ b/Front-end/la-bergerie-des-reptiles.html
@@ -21,7 +21,7 @@
     <div class="carousel">
         <div class="list">
             <div class="item">
-                <img src="public/bergerie.jpg" alt="Bergerie des Reptiles">
+                <img src="public/Bergerie-des-reptiles/bergerie.jpg" alt="Bergerie des Reptiles">
                 <div class="content">
                     <div class="author">ISEN'ZOO</div>
                     <div class="title">BIOME "LA BERGERIE DES REPTILES"</div>
