Correction de bugs

--- a/Front-end/gestion-biomes.html
+++ b/Front-end/gestion-biomes.html
@@ -18,167 +18,61 @@
         </nav>
     </header>
 
-    <!-- carousel -->
     <div class="carousel">
-        <!-- list item -->
         <div class="list">
             <div class="item">
-                <img src="Public/belvedere.jpg">
+                <img src="public/tigre.jpg">
                 <div class="content">
-                    <div class="author">LES BIOMES D'ISEN'ZOO</div>
-                    <div class="title">Biome n°1</div>
-                    <div class="topic">Le Belvédère</div>
+                    <div class="author">ISEN'ZOO</div>
+                    <div class="title">LES BIOMES</div>
                     <div class="des">
-                        Découvrez un point de vue spectaculaire sur les écosystèmes environnants et la vie animale.
-                    </div>
-                    <div class="buttons">
-                        <a href="Le-belvedere.html">
-                            <button>VOIR ENCLOS</button>
-                        </a>
+                    soon
                     </div>
                 </div>
-            </div>
-            <div class="item">
-                <img src="Public/clairiere.png">
-                <div class="content">
-                    <div class="author">LES BIOMES D'ISEN'ZOO</div>
-                    <div class="title">Biome n°2</div>
-                    <div class="topic">Les Clairères</div>
-                    <div class="des">
-                        Les clairières vous offrent un aperçu des écosystèmes ouverts avec une flore et faune diversifiées.
-                    </div>
-                    <div class="buttons">
-                        <a href="Les-clairieres.html">
-                            <button>VOIR ENCLOS</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img src="Public/Le-plateau/plateau.jpg">
-                <div class="content">
-                    <div class="author">LES BIOMES D'ISEN'ZOO</div>
-                    <div class="title">Biome n°3</div>
-                    <div class="topic">Le Plateau</div>
-                    <div class="des">
-                        Un habitat sec et rocheux où évoluent des espèces adaptées aux conditions extrêmes.
-                    </div>
-                    <div class="buttons">
-                        <a href="Le-plateau.html">
-                            <button>VOIR ENCLOS</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img src="Public/vallon-cascade.png">
-                <div class="content">
-                    <div class="author">LES BIOMES D'ISEN'ZOO</div>
-                    <div class="title">Biome n°4</div>
-                    <div class="topic">La Vallon des Cascades</div>
-                    <div class="des">
-                        Explorez un univers aquatique où la faune aquatique et terrestre se rencontre.
-                    </div>
-                    <div class="buttons">
-                        <a href="La-vallon-des-cascades.html">
-                            <button>VOIR ENCLOS</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img src="Public/bois-des-pins.jpg">
-                <div class="content">
-                    <div class="author">LES BIOMES D'ISEN'ZOO</div>
-                    <div class="title">Biome n°5</div>
-                    <div class="topic">Le Bois des Pins</div>
-                    <div class="des">
-                        Promenez-vous dans une forêt dense abritant de nombreuses espèces d’oiseaux et mammifères.
-                    </div>
-                    <div class="buttons">
-                        <a href="Le-bois-des-pins.html">
-                            <button>VOIR ENCLOS</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img src="Public/bergerie-reptile.jpg">
-                <div class="content">
-                    <div class="author">LES BIOMES D'ISEN'ZOO</div>
-                    <div class="title">Biome n°6</div>
-                    <div class="topic">La Bergerie des Reptiles</div>
-                    <div class="des">
-                        Un habitat chaud et humide où vous pourrez observer des reptiles fascinants.
-                    </div>
-                    <div class="buttons">
-                        <a href="la-bergerie-des-reptiles.html">
-                            <button>VOIR ENCLOS</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
+            </div>           
         </div>
-        <!-- list thumnail -->
         <div class="thumbnail">
-            <div class="item">
+            <a href="Le-belvedere.html" class="item">
                 <img src="Public/belvedere.jpg">
                 <div class="content">
-                    <div class="title">
-                        Le Belvedere
-                    </div>
+                    <div class="title">Le Belvedere</div>
                 </div>
-            </div>
-            <div class="item">
+            </a>
+            <a href="Les-clairieres.html" class="item">
                 <img src="Public/clairiere.png">
                 <div class="content">
-                    <div class="title">
-                        Les Clairières
-                    </div>
+                    <div class="title">Les Clairières</div>
                 </div>
-            </div>
-            <div class="item">
+            </a>
+            <a href="Le-plateau.html" class="item">
                 <img src="Public/Le-plateau/plateau.jpg">
                 <div class="content">
-                    <div class="title">
-                        Le Plateau
-                    </div>
+                    <div class="title">Le Plateau</div>
                 </div>
-            </div>
-            <div class="item">
+            </a>
+            <a href="La-vallon-des-cascades.html" class="item">
                 <img src="Public/vallon-cascade.png">
                 <div class="content">
-                    <div class="title">
-                        La Vallon des Cascades
-                    </div>
+                    <div class="title">Vallon des Cascades</div>
                 </div>
-            </div>
-            <div class="item">
+            </a>
+            <a href="Le-bois-des-pins.html" class="item">
                 <img src="Public/bois-des-pins.jpg">
                 <div class="content">
-                    <div class="title">
-                        Le Bois des Pins
-                    </div>
+                    <div class="title">Le Bois des Pins</div>
                 </div>
-            </div>
-            <div class="item">
+            </a>
+            <a href="la-bergerie-des-reptiles.html" class="item">
                 <img src="Public/bergerie-reptile.jpg">
                 <div class="content">
                     <div class="title">
                         La Bergerie des reptiles
                     </div>
                 </div>
-            </div>
-        </div>
-        <!-- next prev -->
-
-        <div class="arrows">
-            <button id="prev"><</button>
-            <button id="next">></button>
+            </a>
         </div>
         <!-- time running -->
         <div class="time"></div>
     </div>
-    <script src="app.js"></script>
 </body>
 </html>
