--- a/Front-end/la-bergerie-des-reptiles.html
+++ b/Front-end/la-bergerie-des-reptiles.html
@@ -32,7 +32,7 @@
             </div>           
         </div>
         <div class="thumbnail">
-            <a href="bergerie-espece1.html" class="item">
+            <a href="bergerie-enclos1.html" class="item">
                 <img src="Public/Bergerie-des-reptiles/python.jpg" alt="Python">
                 <div class="content">
                     <div class="title">ESPÈCE 1 - PYTHON</div>
