--- a/Front-end/la-bergerie-des-reptiles.html
+++ b/Front-end/la-bergerie-des-reptiles.html
@@ -38,13 +38,13 @@
                     <div class="title">ESPÈCE 1 - PYTHON</div>
                 </div>
             </a>
-            <a href="bergerie-espece2.html" class="item">
+            <a href="bergerie-enclos2.html" class="item">
                 <img src="Public/Bergerie-des-reptiles/tortue.jpg" alt="Tortue">
                 <div class="content">
                     <div class="title">ESPÈCE 2 - TORTUE</div>
                 </div>
             </a>
-            <a href="bergerie-espece3.html" class="item">
+            <a href="bergerie-enclos3.html" class="item">
                 <img src="Public/Bergerie-des-reptiles/iguane.jpg" alt="Iguane">
                 <div class="content">
                     <div class="title">ESPÈCE 3 - IGUANE</div>
