--- a/Front-end/le-bois-des-pins.html
+++ b/Front-end/le-bois-des-pins.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="bois-pins-enclos.css">
+    <link rel="stylesheet" href="le-bois-des-pins.css">
 </head>
 <body>
     <header>
@@ -21,29 +21,68 @@
     <div class="carousel">
         <div class="list">
             <div class="item">
-                <img src="Public/Bois-des-Pins/cerf.jpg" alt="Cerf">
+              <img src="Public/bois-pins-photo/bois-des-pins.jpg" alt="Bois des Pins">
                 <div class="content">
-                    <div class="author">LES ANIMAUX DU BOIS DES PINS</div>
-                    <div class="title">Enclos 1</div>
-                    <div class="topic">Le Cerf</div>
+                    <div class="author">ISEN'ZOO</div>
+                    <div class="title">BIOME "LE BOIS DES PINS"</div>
                     <div class="des">
-                        Le Cerf est un mammifère majestueux souvent considéré comme le roi de la forêt. Ses grands bois ramifiés sont caractéristiques des mâles et servent à établir leur dominance pendant la saison des amours. On le trouve principalement dans les forêts tempérées et les prairies.<br>                       
-                    </div>
-                    <div class="fiche">
-                        CLASSE, ORDRE ET FAMILLE : MAMMIFÈRES, ARTIODACTYLES, CERVIDÉS<br>
-                        ESPÈCE : CERVUS ELAPHUS (CERF ÉLAPHE)<br>
-                        DURÉE DE VIE : 10-15 ANS EN MILIEU SAUVAGE<br>
-                        TAILLE & POIDS : 1,2-1,5 M AU GARROT ; 100-300 KG (SELON LES RÉGIONS)<br>
-                        GESTATION : 230 JOURS, 1 FAON PAR PORTÉE<br>
-                        HABITAT NATUREL : FORÊTS TEMPÉRÉES, PRAIRIES ET ZONES MONTAGNEUSES<br>
-                        RÉGIME ALIMENTAIRE : HERBIVORE (FEUILLES, HERBES, RAMEAUX)<br>
-                        RÉGION D'ORIGINE : EUROPE, ASIE ET AMÉRIQUE DU NORD<br>
-                        STATUT UICN : PRÉOCCUPATION MINEURE (LC)<br>
+                        Le Bois des Pins abrite une grande variété d'animaux sauvages, tous plus fascinants les uns que les autres !
                     </div>
                 </div>
             </div>           
         </div>
+
+        <div class="thumbnail">
+            <a href="bois-des-pins-enclos1.html" class="item">
+                <img src="Public/bois-pins-photo/cerf.jpg" alt="Cerf">
+                <div class="content">
+                    <div class="title">ENCLOS 1 - CERF</div>
+                </div>
+            </a>
+            <a href="plateau-enclos2.html" class="item">
+                <img src="Public/Le-plateau/macaque-crabier.jpg" alt="Macaque Crabier">
+                <div class="content">
+                    <div class="title">ENCLOS 2 - MACAQUE CRABIER</div>
+                </div>
+            </a>
+            <a href="plateau-enclos3.html" class="item">
+                <img src="Public/Le-plateau/antilope.jpg" alt="Antilope">
+                <div class="content">
+                    <div class="title">ENCLOS 3 - ANTIPOLOPE</div>
+                </div>
+            </a>
+            <a href="plateau-enclos4.html" class="item">
+                <img src="Public/Le-plateau/niglaut.jpg" alt="Niglaut">
+                <div class="content">
+                    <div class="title">ENCLOS 4 - NIGLAUT</div>
+                </div>
+            </a>
+            <a href="plateau-enclos5.html" class="item">
+                <img src="Public/Le-plateau/loup-europe.jpg" alt="Loup Européen">
+                <div class="content">
+                    <div class="title">ENCLOS 5 - LOUP EUROPÉEN</div>
+                </div>
+            </a>
+            <a href="plateau-enclos6.html" class="item">
+                <img src="Public/Le-plateau/daim.jpg" alt="Daim">
+                <div class="content">
+                    <div class="title">ENCLOS 6 - DAIM</div>
+                </div>
+            </a>
+            <a href="plateau-enclos7.html" class="item">
+                <img src="Public/Le-plateau/vautour.jpg" alt="Vautour">
+                <div class="content">
+                    <div class="title">ENCLOS 7 - VAUTOUR</div>
+                </div>
+            </a>
+        </div>
+
+        <div class="arrows">
+            <button id="prev"><</button>
+            <button id="next">></button>
+        </div>
+        <!-- time running -->
+        <div class="time"></div>
     </div>
-    <script src="app.js"></script>
 </body>
 </html>
