--- a/Front-end/bergerie-enclos2.html
+++ b/Front-end/bergerie-enclos2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="plateau-enclos.css">
+    <link rel="stylesheet" href="bergerie-enclos.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
             <div class="item">
                 <img src="Public/Bergerie-des-reptiles/tortue-de-terre.jpg" alt="Tortue de Terre">
                 <div class="content">
-                    <div class="author">LES ANIMAUX DU PLATEAU</div>
+                    <div class="author">LES ANIMAUX LA BERGERIE DES REPTILES</div>
                     <div class="title">Enclos D</div>
                     <div class="topic">La Tortue de Terre</div>
                     <div class="des">
