--- a/Front-end/bergerie-enclos3.html
+++ b/Front-end/bergerie-enclos3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="plateau-enclos.css">
+    <link rel="stylesheet" href="bergerie-enclos.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
             <div class="item">
                 <img src="Public/Bergerie-des-reptiles/iguane-vert.jpg" alt="Iguane Vert">
                 <div class="content">
-                    <div class="author">LES ANIMAUX DU PLATEAU</div>
+                    <div class="author">LES ANIMAUX DE LA BERGERIE DES REPTILES"</div>
                     <div class="title">Enclos C</div>
                     <div class="topic">L'Iguane Vert</div>
                     <div class="des">
