--- a/Front-end/bois-des-pins-enclos1.html
+++ b/Front-end/bois-des-pins-enclos1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="bois-pins-enclos.css">
+    <link rel="stylesheet" href="bois-des-pins-enclos.css">
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
     <div class="carousel">
         <div class="list">
             <div class="item">
-                <img src="Public/Bois-des-Pins/cerf.jpg" alt="Cerf">
+                <img src="Public/bois-pins-photo/cerf.jpg" alt="Cerf">
                 <div class="content">
                     <div class="author">LES ANIMAUX DU BOIS DES PINS</div>
                     <div class="title">Enclos 1</div>
