--- a/Front-end/Le-bois-des-pins.html
+++ b/Front-end/Le-bois-des-pins.html
@@ -45,8 +45,8 @@
                     <div class="title">ENCLOS 2 - MACAQUE CRABIER</div>
                 </div>
             </a>
-            <a href="plateau-enclos3.html" class="item">
-                <img src="Public/Le-plateau/antilope.jpg" alt="Antilope">
+            <a href="bois-des-pins-enclos3.html" class="item">
+                <img src="Public/bois-pins-photo/antilope.jpeg" alt="Antilope">
                 <div class="content">
                     <div class="title">ENCLOS 3 - ANTIPOLOPE</div>
                 </div>
