--- a/Front-end/Le-bois-des-pins.html
+++ b/Front-end/Le-bois-des-pins.html
@@ -45,7 +45,7 @@
                     <div class="title">ENCLOS 2 - MACAQUE CRABIER</div>
                 </div>
             </a>
-            <a href="bois-des-pins-enclos3.html" class="item">
+            <a href="bois-pins-enclos3.html" class="item">
                 <img src="Public/bois-pins-photo/antilope.jpeg" alt="Antilope">
                 <div class="content">
                     <div class="title">ENCLOS 3 - ANTIPOLOPE</div>
