--- a/Front-end/le-bois-des-pins.html
+++ b/Front-end/le-bois-des-pins.html
@@ -39,14 +39,14 @@
                     <div class="title">ENCLOS 1 - CERF</div>
                 </div>
             </a>
-            <a href="plateau-enclos2.html" class="item">
-                <img src="Public/Le-plateau/macaque-crabier.jpg" alt="Macaque Crabier">
+            <a href="bois-des-pins-enclos2.html" class="item">
+                <img src="Public/bois-pins-photo/macaque-crabier.jpg" alt="Macaque Crabier">
                 <div class="content">
                     <div class="title">ENCLOS 2 - MACAQUE CRABIER</div>
                 </div>
             </a>
-            <a href="plateau-enclos3.html" class="item">
-                <img src="Public/Le-plateau/antilope.jpg" alt="Antilope">
+            <a href="bois-pins-enclos3.html" class="item">
+                <img src="Public/bois-pins-photo/antilope.jpeg" alt="Antilope">
                 <div class="content">
                     <div class="title">ENCLOS 3 - ANTIPOLOPE</div>
                 </div>
