--- a/Front-end/Inscription.html
+++ b/Front-end/Inscription.html
@@ -36,8 +36,8 @@
                     <input type="email" id="email" name="email" placeholder="Votre adresse email" required>
                 </div>
                 <div class="form-group">
-                    <label for="email">Pseudo</label>
-                    <input type="pseudo" id="email" name="pseudo" placeholder="Votre pseudo" required>
+                    <label for="nom">Nom</label>
+                    <input type="name" id="nom" name="nom" placeholder="Votre nom" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Mot de passe</label>
