--- a/Front-end/Connexion.html
+++ b/Front-end/Connexion.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="connexion.css"> 
+    <title>Connexion - Parc Animalier de l'ISEN</title>
+    <link rel="stylesheet" href="connexion.css"> <!-- Nouveau fichier CSS -->
 </head>
 <body>
     <div class="background-image">
@@ -11,24 +12,18 @@
     </div>
 
     <header>
-        <nav class="header-container">
+        <nav>
             <div class="logo">
-                <a href="Accueil.html">
-                    <img src="Public/logo-site.png" alt="Logo Parc Animalier de l'ISEN">
+                <a href="Accueil.html" style="text-decoration: none;">
+                    <h1>Parc Animalier de l'ISEN</h1>
                 </a>
             </div>
-    
             <ul class="nav-links">
-                <li><a href="decouvrir.html">Découvrir le Parc</a></li>
-                <li><a href="gestion-biomes.html">Les biomes</a></li>
-                <li><a href="animaux.html">Animaux</a></li>
+                <li><a href="Decouvrir.html">Découvrir le Parc</a></li>
+                <li><a href="gestion-biomes.html">Nos Animaux</a></li>
                 <li><a href="services.html">Nos Services</a></li>
-                <li><a href="billeterie.html">Billeterie</a></li>
+                <li><a href="connexion.html">Inscription</a></li>
             </ul>
-    
-            <a href="Connexion.html" class="Inscription">
-                <img src="Public/empreinte-de-patte.png" alt="PatteChat" class="icon"> Inscription
-            </a>
         </nav>
     </header>
 
@@ -42,12 +37,14 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Mot de passe</label>
-                    <input type="password" id="password" name="password" placeholder="Votre mot de passe" required>
+                    <input type="password" id="mot_de_passe" name="mot_de_passe" placeholder="Votre mot de passe" required>
                 </div>
                 <button type="submit" class="btn">Se connecter</button>
                 <p class="signup-link">Pas encore inscrit ? <a href="inscription.html">Créer un compte</a></p>
             </form>
         </section>
     </main>
+
+
 </body>
 </html>
