--- a/Front-end/Le-belvedere.html
+++ b/Front-end/Le-belvedere.html
@@ -1,77 +1,100 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le Belvédère - Parc Animalier</title>
+    <title>ISEN'ZOO - Le Belvedère</title>
     <link rel="stylesheet" href="Le-belvedere.css">
 </head>
 <body>
     <header>
-        <nav class="header-container">
-            <div class="logo">
-                <a href="Accueil.html">
-                    <img src="Public/logo-site.png" alt="Logo Parc Animalier de l'ISEN">
-                </a>
-            </div>
-    
-            <ul class="nav-links">
-                <li><a href="decouvrir.html">Découvrir le Parc</a></li>
-                <li><a href="gestion-biomes.html">Les biomes</a></li>
-                <li><a href="animaux.html">Animaux</a></li>
-                <li><a href="services.html">Nos Services</a></li>
-                <li><a href="billeterie.html">Billeterie</a></li>
-            </ul>
-    
-            <a href="Connexion.html" class="Inscription">
-                <img src="Public/empreinte-de-patte.png" alt="PatteChat" class="icon"> Inscription
-            </a>
+        <nav>
+            <a href="decouvrir.html">Découvrir le Parc</a>
+            <a href="gestion-biomes.html">Les Biomes</a>
+            <a href="animaux.html">Animaux</a>
+            <a href="services.html">Nos Services</a>
+            <a href="billeterie.html">Billeterie</a>
+            <a href="Connexion.html">Inscription</a>
         </nav>
     </header>
-    <main class="belvedere-container">
-        <section class="intro-section">
-            <h1>Bienvenue dans le Biome "Le Belvédère"</h1>
-            <p>Souhaitez-vous découvrir les animaux qui se cachent derrière les enclos du biome Belvédère ? Explorez les enclos pour rencontrer nos animaux fascinants.</p>
-        </section>
 
-        <section class="enclos-list">
-            <div class="enclos">
-                <img src="Public/enclos-belvedere.jpg" alt="Enclos A">
-                <h3>Enclos A</h3>
-                <p>In process</p>
-                <a href="belvedere-enclosA.html" class="button"></a>
+    <!-- Section Image Principale -->
+    <div class="carousel">
+        <div class="list">
+            <div class="item">
+                <img src="public/belvedere.jpg">
+                <div class="content">
+                    <div class="author">ISEN'ZOO</div>
+                    <div class="title">BIOME "LE BELVEDÈRE"</div>
+                    <div class="des">
+                        Le biome "Le Belvédère" abrite des animaux emblématiques tels que le rhinocéros, le gnou, le guépard, l'autruche, et le fennec, offrant un aperçu fascinant de la faune des savanes et zones arides.
+                    </div>
+                </div>
             </div>
-            <div class="enclos">
-                <img src="Public/enclos-belvedere.jpg" alt="Enclos B">
-                <h3>Enclos B</h3>
-                <p>In process</p>
-            </div>
-            <div class="enclos">
-                <img src="Public/enclos-belvedere.jpg" alt="Enclos C">
-                <h3>Enclos C</h3>
-                <p>In process</p>
-            </div>
-            <div class="enclos">
-                <img src="Public/enclos-belvedere.jpg" alt="Enclos D">
-                <h3>Enclos D</h3>
-                <p>In process</p>
-            </div>
-            <div class="enclos">
-                <img src="Public/enclos-belvedere.jpg" alt="Enclos E">
-                <h3>Enclos E</h3>
-                <p>In process</p>
-            </div>
-            <div class="enclos">
-                <img src="Public/enclos-belvedere.jpg" alt="Enclos F">
-                <h3>Enclos F</h3>
-                <p>In process</p>
-            </div>
-            <div class="enclos">
-                <img src="Public/enclos-belvedere.jpg" alt="Enclos G">
-                <h3>Enclos G</h3>
-                <p>In process</p>
-            </div>
-        </section>
-    </main>
+        </div>
+    </div>
+
+    <!-- Section des Thumbnails -->
+    <div class="thumbnail-container">
+        <!-- Titre des thumbnails -->
+        <h2 class="thumbnail-title">Découvrez les enclos de ce Biome</h2>
+
+        <div class="thumbnail">
+            <a href="belvedere-enclos1.html" class="item">
+                <img src="Public/Le-belvedere/rhinoceros.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 1</div>
+                </div>
+            </a>
+            <a href="belvedere-enclos2.html" class="item">
+                <img src="Public/Le-belvedere/autruche.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 2</div>
+                </div>
+            </a>
+            <a href="belvedere-enclos3.html" class="item">
+                <img src="Public/Le-belvedere/guepard.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 3</div>
+                </div>
+            </a>
+            <a href="belvedere-enclos4.html" class="item">
+                <img src="Public/Le-belvedere/crocodile.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 4</div>
+                </div>
+            </a>
+            <a href="belvedere-enclos5.html" class="item">
+                <img src="Public/Le-belvedere/casoar.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 5</div>
+                </div>
+            </a>
+            <a href="belvedere-enclos6.html" class="item">
+                <img src="Public/Le-belvedere/tapir.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 6</div>
+                </div>
+            </a>
+            <a href="belvedere-enclos7.html" class="item">
+                <img src="Public/Le-belvedere/saimiri.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 7</div>
+                </div>
+            </a>
+            <a href="belvedere-enclos8.html" class="item">
+                <img src="Public/Le-belvedere/fennec.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 8</div>
+                </div>
+            </a>
+            <a href="belvedere-enclos9.html" class="item">
+                <img src="Public/Le-belvedere/suricate.jpg">
+                <div class="content">
+                    <div class="title">ENCLOS 9</div>
+                </div>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
