--- a/Front-end/le-bois-des-pins.html
+++ b/Front-end/le-bois-des-pins.html
@@ -51,8 +51,8 @@
                     <div class="title">ENCLOS 3 - ANTIPOLOPE</div>
                 </div>
             </a>
-            <a href="plateau-enclos4.html" class="item">
-                <img src="Public/Le-plateau/niglaut.jpg" alt="Niglaut">
+            <a href="bois-des-pins-enclos4.html" class="item">
+       			  <img src="Public/bois-pins-photo/nilgaut.jpg" alt="Niglaut">
                 <div class="content">
                     <div class="title">ENCLOS 4 - NIGLAUT</div>
                 </div>
