--- a/Front-end/le-bois-des-pins.html
+++ b/Front-end/le-bois-des-pins.html
@@ -57,8 +57,8 @@
                     <div class="title">ENCLOS 4 - NIGLAUT</div>
                 </div>
             </a>
-            <a href="plateau-enclos5.html" class="item">
-                <img src="Public/Le-plateau/loup-europe.jpg" alt="Loup Européen">
+            <a href="bois-des-pins-enclos5.html" class="item">
+                <img src="Public/bois-pins-photo/loup-europeen.jpg"alt="Loup Européen">
                 <div class="content">
                     <div class="title">ENCLOS 5 - LOUP EUROPÉEN</div>
                 </div>
